# sanki-android

./: .gitattributes  .gitignore  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  card_model.hpp  deck_loader.cpp  deck_loader.hpp  fsrs_scheduler.cpp  fsrs_scheduler.hpp  jni_bridge.cpp  sanki_core.cpp  sanki_core.hpp  search_engine.cpp  search_engine.hpp  session_manager.cpp  session_manager.hpp  sm2_scheduler.cpp  sm2_scheduler.hpp  stats_engine.cpp  stats_engine.hpp
app/src/main/java/io/github/maureranton/sanki/: MainActivity.kt  SankiApp.kt
app/src/main/java/io/github/maureranton/sanki/bridge/: SankiBridge.kt
app/src/main/java/io/github/maureranton/sanki/ui/navigation/: NavGraph.kt
app/src/main/java/io/github/maureranton/sanki/ui/screens/: DeckListScreen.kt  SettingsScreen.kt  SharedDecksScreen.kt  StatsScreen.kt  StudyScreen.kt  SyncScreen.kt
app/src/main/java/io/github/maureranton/sanki/ui/theme/: Theme.kt
app/src/main/java/io/github/maureranton/sanki/widget/: SankiWidgetReceiver.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  widget_background.xml
app/src/main/res/layout/: sanki_widget.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: sanki_widget_info.xml
